create unit for vehicles and starships

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,8 +11,8 @@
         <form action="/fill-db" method="post">
             <input type="submit"  class="btn btn-dark p-10" value="Populate the DB">
         </form>
-        <button type="button" class="btn btn-light p-10"  href="/starships">Take me to the starships</button>
-        <button type="button" class="btn btn-dark p-10"  href="/vehicles">Take me to the vehicles</button>
+        <a  class="btn btn-light p-10"  href="/starships">Take me to the starships</a>
+        <a  class="btn btn-dark p-10"  href="/vehicles">Take me to the vehicles</a>
 
 
     </div>
