--- a/views/vehicles.hbs
+++ b/views/vehicles.hbs
@@ -1,23 +1,36 @@
-<table id="table_id" class="display" style="width:100%">
+<p class="lead">
+    Star Wars Vehicles
+</p>
+
+<a  class="btn btn-dark p-10"  href="/vehicles/create-vehicle">Create a New Vehicle</a>
+
+<table id="table_id" class="display nowrap" style="width:100%">
     <thead>
     <tr>
         <th>Name</th>
-        <th>Position</th>
-        <th>Office</th>
-        <th>Age</th>
-        <th>Start date</th>
-        <th>Salary</th>
+        <th>Model</th>
+        <th>Manufacturer</th>
+        <th>Cost in credits</th>
+        <th>Length</th>
+        <th>Max atmosphering speed</th>
+        <th>Passengers</th>
+        <th>Cargo capacity</th>
+        <th>Consumables</th>
     </tr>
     </thead>
     <tbody>
-    {{#each vehicle}}
+    {{#each vehicles}}
+
     <tr>
-        <td> {{this.name}}/td>
         <td> {{this.name}}</td>
-        <td> {{this.name}}</td>
-        <td> {{this.name}}</td>
-        <td> {{this.name}}</td>
-        <td> {{this.name}}</td>
+        <td> {{this.model}}</td>
+        <td> {{this.manufacturer}}</td>
+        <td> {{this.cost_in_credits}}</td>
+        <td> {{this.length}}</td>
+        <td> {{this.max_atmosphering_speed}}</td>
+        <td> {{this.passengers}}</td>
+        <td> {{this.cargo_capacity}}</td>
+        <td> {{this.consumables}}</td>
     </tr>
     {{/each}}
 
@@ -25,11 +38,14 @@
     <tfoot>
     <tr>
         <th>Name</th>
-        <th>Position</th>
-        <th>Office</th>
-        <th>Age</th>
-        <th>Start date</th>
-        <th>Salary</th>
+        <th>Model</th>
+        <th>Manufacturer</th>
+        <th>Cost in credits</th>
+        <th>Length</th>
+        <th>Max atmosphering speed</th>
+        <th>Passengers</th>
+        <th>Cargo capacity</th>
+        <th>Consumables</th>
     </tr>
     </tfoot>
 </table>
@@ -37,6 +53,12 @@
 
 <script>
     $(document).ready( function () {
-        $('#table_id').DataTable();
+        $('#table_id').DataTable( {
+            'paging': true,
+            "scrollY": 500,
+            "scrollX": true,
+            "searching": true
+
+        } );
     } );
 </script>
